Fixing color contrasts

--- a/components/landing-page/featured-posts/FeaturedPosts.module.scss
+++ b/components/landing-page/featured-posts/FeaturedPosts.module.scss
@@ -22,7 +22,7 @@
       flex-direction: column;
 
       .author {
-        color: $secondary-darker;
+        color: rgb(82, 82, 82);
         margin-block: 5px;
         font-size: 1rem;
         font-weight: 400;
@@ -30,7 +30,7 @@
       }
 
       .title {
-        color: $secondary-darkest;
+        color: black;
         font-size: 1.5rem;
         margin-block: 0;
       }
@@ -38,7 +38,7 @@
       .excerpt {
         text-align: justify;
         margin-bottom: auto;
-        color: $secondary-darkest;
+        color: black;
         hyphens: auto; 
       }
     }
